# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  github_com_sarff_go-robotdreams-diplom_internal_models.LoginRequest:
+  models.LoginRequest:
     properties:
       email:
         type: string
@@ -10,7 +10,7 @@ definitions:
     - email
     - password
     type: object
-  github_com_sarff_go-robotdreams-diplom_internal_models.RegisterRequest:
+  models.RegisterRequest:
     properties:
       email:
         type: string
@@ -24,6 +24,28 @@ definitions:
     required:
     - email
     - password
+    - username
+    type: object
+  models.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      is_online:
+        type: boolean
+      last_seen:
+        type: string
+      updated_at:
+        type: string
+      username:
+        maxLength: 20
+        minLength: 3
+        type: string
+    required:
+    - email
     - username
     type: object
 host: 127.0.0.1
@@ -44,7 +66,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github_com_sarff_go-robotdreams-diplom_internal_models.LoginRequest'
+          $ref: '#/definitions/models.LoginRequest'
       produces:
       - application/json
       responses:
@@ -62,6 +84,35 @@ paths:
       summary: Вхід користувача
       tags:
       - auth
+  /api/v1/auth/profile:
+    get:
+      consumes:
+      - application/json
+      description: Отримати інформацію про поточного автентифікованого користувача
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Профіль користувача
+          schema:
+            $ref: '#/definitions/models.User'
+        "401":
+          description: Неавторизований доступ
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Користувача не знайдено
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - UserTokenAuth: []
+      summary: Отримати профіль користувача
+      tags:
+      - auth
   /api/v1/auth/register:
     post:
       consumes:
@@ -73,7 +124,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github_com_sarff_go-robotdreams-diplom_internal_models.RegisterRequest'
+          $ref: '#/definitions/models.RegisterRequest'
       produces:
       - application/json
       responses:
